fix: card img aligns

--- a/src/components/Establishment/Card/styles.module.scss
+++ b/src/components/Establishment/Card/styles.module.scss
@@ -40,6 +40,7 @@
     background-color: $background-color-gray-light;
   }
   .headerImage {
+    object-fit: cover;
     width: 100%;
     height: 100%;
     max-width: 100%;
